# Kelly_Calculator

./: CMakeLists.txt
include/: kelly_calculator.hpp  kelly_criterion.hpp  kelly_exception.hpp
src/: kelly_calculator.cpp  kelly_criterion.cpp
